# simple_otp

./: .gitmodules  CMakeLists.txt  README.md
example/: main.c
src/: base32.c  common.h  hotp.c  hotp.h  totp.c  totp.h
